# LeggedKinModule

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: elspider_air_kin.h  leg.urdf
config/ikfast_leg_lib/: CMakeLists.txt  build.sh  ikfast_leg.h  ikfast_leg_lib.cpp  ikfast_leg_lib.h  test.cpp
core/: config.h.in  legged_kin.h  single_leg_kin.cpp  single_leg_kin.h
examples/: elspider_air_kin.h
inc/: hexapod_kin.h  single_leg_kin.h
src/: single_leg_kin.cpp
test/: elspider_air_test.cpp  single_leg_test.cpp
